removing prod stuff

--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -269,127 +269,127 @@ jobs:
 
 
 
-##---------------------------------------------------------------#
-##----------------------- CD to Production ----------------------#
-##---------------------------------------------------------------#
-
-# TRIGGER PROD deployment
-  - name: trig_prod_deploy
-    type: runSh
-    steps:
-      - IN: ans_demo
-        switch: off
-      - IN: release_app
-        switch: off
-      - OUT: prod_app_ver
-      - TASK:
-        - script: IN/ans_demo/gitRepo/setVer.sh release_app prod_app_ver
-
-#---------------------------------------------------------------#
-#-------------- Prod Infra Prov Using ANsible  -----------------#
-#---------------------------------------------------------------#
-
-# PROV Prod VPC with Ansible
-  - name: prov_prod_vpc
-    type: runSh
-    steps:
-      - IN: trig_prod_deploy
-      - IN: aws_region
-      - IN: aws_creds
-      - IN: ans_demo
-        switch: off
-      - IN: prod_conf
-      - TASK:
-        - script: |
-            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-            cd $(shipctl get_resource_state ans_demo)
-            shipctl replace an_vpc_prov.yml
-            ansible-playbook -v an_vpc_prov.yml
-      - OUT: prod_info
-
-# PROV Prod ECS Cluster with Ansible
-  - name: prov_prod_ecs
-    type: runSh
-    steps:
-      - IN: prov_prod_vpc
-      - IN: prod_conf
-      - IN: aws_region
-      - IN: aws_creds
-        switch: off
-      - IN: ans_demo
-        switch: off
-      - IN: inst_prof_name
-        switch: off
-      - TASK:
-        - script: |
-            sudo pip install boto3
-            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-            cd $(shipctl get_resource_state ans_demo)
-            shipctl replace an_ecs_prov.yml
-            ansible-playbook -v an_ecs_prov.yml
-      - OUT: prod_env_ecs
-      - OUT: prod_info
-
-# DEPLOY app to PROD
-  - name: deploy_app_prod
-    type: deploy
-    steps:
-      - IN: prov_prod_ecs
-      - IN: scale_app_prod
-      - IN: release_app
-        switch: off
-      - IN: prod_env_ecs
-        switch: off
-      - TASK: managed
-#        deployMethod: replace
-
-#---------------------------------------------------------------#
-#----------------------- Deprov Prod Infra----------------------#
-#---------------------------------------------------------------#
-# DEPROV PROD Infra with Ansible
-  - name: deprov_prod_infra
-    type: runSh
-    steps:
-      - IN: deploy_app_prod
-        switch: off
-      - IN: aws_region
-      - IN: prod_conf
-        switch: off
-      - IN: prod_info
-        switch: off
-      - IN: aws_creds
-        switch: off
-      - IN: ans_demo
-        switch: off
-      - TASK:
-        - script: |
-            sudo pip install boto3
-            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-            cd $(shipctl get_resource_state ans_demo)
-            shipctl replace an_ecs_deprov.yml
-            ansible-playbook -v an_ecs_deprov.yml
-
-# DEPROV PROD VPC with Ansible
-  - name: deprov_prod_vpc
-    type: runSh
-    steps:
-      - IN: aws_region
-      - IN: deprov_prod_infra
-      - IN: prod_conf
-        switch: off
-      - IN: prod_info
-        switch: off
-      - IN: aws_creds
-        switch: off
-      - IN: ans_demo
-        switch: off
-      - TASK:
-        - script: |
-            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-            cd $(shipctl get_resource_state ans_demo)
-            shipctl replace an_vpc_deprov.yml
-            ansible-playbook -v an_vpc_deprov.yml
+# ##---------------------------------------------------------------#
+# ##----------------------- CD to Production ----------------------#
+# ##---------------------------------------------------------------#
+#
+# # TRIGGER PROD deployment
+#   - name: trig_prod_deploy
+#     type: runSh
+#     steps:
+#       - IN: ans_demo
+#         switch: off
+#       - IN: release_app
+#         switch: off
+#       - OUT: prod_app_ver
+#       - TASK:
+#         - script: IN/ans_demo/gitRepo/setVer.sh release_app prod_app_ver
+#
+# #---------------------------------------------------------------#
+# #-------------- Prod Infra Prov Using ANsible  -----------------#
+# #---------------------------------------------------------------#
+#
+# # PROV Prod VPC with Ansible
+#   - name: prov_prod_vpc
+#     type: runSh
+#     steps:
+#       - IN: trig_prod_deploy
+#       - IN: aws_region
+#       - IN: aws_creds
+#       - IN: ans_demo
+#         switch: off
+#       - IN: prod_conf
+#       - TASK:
+#         - script: |
+#             export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
+#             export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
+#             cd $(shipctl get_resource_state ans_demo)
+#             shipctl replace an_vpc_prov.yml
+#             ansible-playbook -v an_vpc_prov.yml
+#       - OUT: prod_info
+#
+# # PROV Prod ECS Cluster with Ansible
+#   - name: prov_prod_ecs
+#     type: runSh
+#     steps:
+#       - IN: prov_prod_vpc
+#       - IN: prod_conf
+#       - IN: aws_region
+#       - IN: aws_creds
+#         switch: off
+#       - IN: ans_demo
+#         switch: off
+#       - IN: inst_prof_name
+#         switch: off
+#       - TASK:
+#         - script: |
+#             sudo pip install boto3
+#             export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
+#             export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
+#             cd $(shipctl get_resource_state ans_demo)
+#             shipctl replace an_ecs_prov.yml
+#             ansible-playbook -v an_ecs_prov.yml
+#       - OUT: prod_env_ecs
+#       - OUT: prod_info
+#
+# # DEPLOY app to PROD
+#   - name: deploy_app_prod
+#     type: deploy
+#     steps:
+#       - IN: prov_prod_ecs
+#       - IN: scale_app_prod
+#       - IN: release_app
+#         switch: off
+#       - IN: prod_env_ecs
+#         switch: off
+#       - TASK: managed
+# #        deployMethod: replace
+#
+# #---------------------------------------------------------------#
+# #----------------------- Deprov Prod Infra----------------------#
+# #---------------------------------------------------------------#
+# # DEPROV PROD Infra with Ansible
+#   - name: deprov_prod_infra
+#     type: runSh
+#     steps:
+#       - IN: deploy_app_prod
+#         switch: off
+#       - IN: aws_region
+#       - IN: prod_conf
+#         switch: off
+#       - IN: prod_info
+#         switch: off
+#       - IN: aws_creds
+#         switch: off
+#       - IN: ans_demo
+#         switch: off
+#       - TASK:
+#         - script: |
+#             sudo pip install boto3
+#             export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
+#             export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
+#             cd $(shipctl get_resource_state ans_demo)
+#             shipctl replace an_ecs_deprov.yml
+#             ansible-playbook -v an_ecs_deprov.yml
+#
+# # DEPROV PROD VPC with Ansible
+#   - name: deprov_prod_vpc
+#     type: runSh
+#     steps:
+#       - IN: aws_region
+#       - IN: deprov_prod_infra
+#       - IN: prod_conf
+#         switch: off
+#       - IN: prod_info
+#         switch: off
+#       - IN: aws_creds
+#         switch: off
+#       - IN: ans_demo
+#         switch: off
+#       - TASK:
+#         - script: |
+#             export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
+#             export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
+#             cd $(shipctl get_resource_state ans_demo)
+#             shipctl replace an_vpc_deprov.yml
+#             ansible-playbook -v an_vpc_deprov.yml
