updating SIT pointer and removing runCI

--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -117,11 +117,11 @@ jobs:
 #------------------- BUILD/CI with SHIPPABLE CI ----------------#
 #---------------------------------------------------------------#
 
-### PACKAGE sample Node.js into docker container
-  - name: ci-push-docker-hub_runCI
-    type: runCI
-    steps:
-      - OUT: demo_doc_img
+# ### PACKAGE sample Node.js into docker container
+#   - name: ci-push-docker-hub_runCI
+#     type: runCI
+#     steps:
+#       - OUT: demo_doc_img
 
 # DEFINE app micro service
   - name: create_app_man
