--- a/an_ecs_prov.yml
+++ b/an_ecs_prov.yml
@@ -27,7 +27,7 @@
 
     - name: Provision {{ INST_COUNT }} instances with tag {{ INST_TAG }}
       ec2:
-         key_name: demo-key
+         key_name: dr-pem
          group: default
          vpc_subnet_id: "{{ VPC_SUBNET_ID }}"
          instance_type: "{{ INST_TYPE }}"
