removing ami stuff

--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -149,12 +149,12 @@ resources:
     seed:
       versionName: "1.0.0"
 
-# Current Prod version
-  - name: prod_app_ver
-    type: params
-    version:
-      params:
-        RELEASE_VER_NUMBER: "1.0.0"
+# # Current Prod version
+#   - name: prod_app_ver
+#     type: params
+#     version:
+#       params:
+#         RELEASE_VER_NUMBER: "1.0.0"
 
 #---------------------------------------------------------------#
 #----------------------- PROD VPC Resources --------------------#
