--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -207,16 +207,16 @@ jobs:
     on_failure:
       - script: touch /build/state/failure.txt
 
-# CREATE a production ready release
-  - name: release_app
-    type: release
-    steps:
-      - IN: seed_app_ver
-      - IN: sit
-      - IN: deploy_app_test
-        switch: off
-      - TASK: managed
-        bump: patch
+# # CREATE a production ready release
+#   - name: release_app
+#     type: release
+#     steps:
+#       - IN: seed_app_ver
+#       - IN: sit
+#       - IN: deploy_app_test
+#         switch: off
+#       - TASK: managed
+#         bump: patch
 
 #---------------------------------------------------------------#
 #----------------------- Deprov Test Infra----------------------#
@@ -226,7 +226,7 @@ jobs:
   - name: deprov_test_infra
     type: runSh
     steps:
-      - IN: release_app
+      - IN: sit
         switch: off
       - IN: aws_region
       - IN: test_conf
